refresh new activity

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -1,4 +1,4 @@
-<div class="app-content-body">
+<div>
     <div class="hbox hbox-auto-xs hbox-auto-sm">
         <!-- .col -->
         <div class="col w-lg bg-light dk b-r bg-auto" id="aside">
@@ -111,7 +111,7 @@
         </div>
         <!-- /.col -->
         <!-- .col -->
-        <div class="col">
+        <div class="col bg-white-only">
             <div class="wrapper">
                 <ul class="timeline">
                     <li class="tl-header">
