--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -160,26 +160,26 @@
                     <!--</div>-->
                     <!--</li>-->
                     <!--<li class="tl-item">-->
-                        <!--<div class="tl-wrap b-primary">-->
-                            <!--<span class="tl-date">04.2014</span>-->
-                            <!--<div class="tl-content panel padder b-a w-md w-auto-xs">-->
-                                <!--<span class="arrow left pull-up"></span>-->
-                                <!--<div class="text-lt m-b-sm">With Title</div>-->
-                                <!--<div class="panel-body pull-in b-t b-light">-->
-                                    <!--<a href="" class="thumb pull-right m-l m-t-xs avatar">-->
-                                        <!--&lt;!&ndash;<img src="img/a4.jpg" alt="...">&ndash;&gt;-->
-                                        <!--<i class="on md b-white bottom"></i>-->
-                                    <!--</a>-->
-                                    <!--<div class="clear">-->
-                                        <!--<a href="" class="text-primary block m-b-xs">@Mike Mcalidek <i-->
-                                            <!--class="icon-twitter"></i></a>-->
-                                        <!--<a href="" class="btn btn-addon btn-sm btn-primary m-t-xs"><i-->
-                                            <!--class="fa fa-eye"></i>-->
-                                            <!--Follow</a>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--<div class="tl-wrap b-primary">-->
+                    <!--<span class="tl-date">04.2014</span>-->
+                    <!--<div class="tl-content panel padder b-a w-md w-auto-xs">-->
+                    <!--<span class="arrow left pull-up"></span>-->
+                    <!--<div class="text-lt m-b-sm">With Title</div>-->
+                    <!--<div class="panel-body pull-in b-t b-light">-->
+                    <!--<a href="" class="thumb pull-right m-l m-t-xs avatar">-->
+                    <!--&lt;!&ndash;<img src="img/a4.jpg" alt="...">&ndash;&gt;-->
+                    <!--<i class="on md b-white bottom"></i>-->
+                    <!--</a>-->
+                    <!--<div class="clear">-->
+                    <!--<a href="" class="text-primary block m-b-xs">@Mike Mcalidek <i-->
+                    <!--class="icon-twitter"></i></a>-->
+                    <!--<a href="" class="btn btn-addon btn-sm btn-primary m-t-xs"><i-->
+                    <!--class="fa fa-eye"></i>-->
+                    <!--Follow</a>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</li>-->
                     <!--<li class="tl-item tl-left">-->
                     <!--<div class="tl-wrap b-primary">-->
@@ -260,7 +260,20 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="inline ">
+                <h4 class=" font-thin">Connect with:</h4>
+
+                <button class="btn btn-sm btn-success pull-left" ui-toggle-class="timeline-center" target=".timeline">
+                    Strava
+                </button>
+                <button class="btn btn-sm btn-success pull-left m-l-md" ui-toggle-class="timeline-center"
+                        target=".timeline">
+                    Polar
+                </button>
+            </div>
         </div>
-        <!-- /.col -->
     </div>
+    <!-- /.col -->
+</div>
 </div>
