adding new sport category activity to ui

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -36,9 +36,9 @@
                     <div class="form-group">
                         <label>Type</label>
                         <select class="input-sm form-control" formControlName="type">
-                            <option>Running</option>
-                            <option>Walking</option>
-                            <option>Gym</option>
+                            <option value="RUN">Running</option>
+                            <option value="RIDE">Riding</option>
+                            <option value="SWIM">Swimming</option>
                         </select>
                     </div>
 
