--- a/web/src/main/webapp/app/layouts/main/main.component.html
+++ b/web/src/main/webapp/app/layouts/main/main.component.html
@@ -1,4 +1,5 @@
 <jhi-page-ribbon></jhi-page-ribbon>
+<toaster-container></toaster-container>
 <div class="bg-white-only">
     <router-outlet name="navbar"></router-outlet>
 </div>
