--- a/web/src/main/webapp/content/css/vendor.css
+++ b/web/src/main/webapp/content/css/vendor.css
@@ -1,5 +1,6 @@
 /* after changing this file run 'yarn run webpack:buildFromStrava:vendor' or 'yarn install' or 'yarn run webpack:buildFromStrava' */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~font-awesome/css/font-awesome.css';
+@import "~angular2-toaster/toaster.css";
 @import 'app.css';
 
