--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -1,3 +1,4 @@
+<athl-spinner></athl-spinner>
 <div>
     <div class="hbox hbox-auto-xs hbox-auto-sm">
         <!-- .col -->
@@ -19,7 +20,7 @@
                             This field is required
                         </span>
                     </div>
-
+§
                     <div class="form-group">
                         <label>Date & Time</label>
                         <div class="form-inline">
