--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -1,4 +1,3 @@
-<athl-spinner></athl-spinner>
 <div>
     <div class="hbox hbox-auto-xs hbox-auto-sm">
         <!-- .col -->
@@ -20,7 +19,7 @@
                             This field is required
                         </span>
                     </div>
-§
+
                     <div class="form-group">
                         <label>Date & Time</label>
                         <div class="form-inline">
@@ -124,7 +123,11 @@
         </div>
         <!-- /.col -->
         <!-- .col -->
-        <div class="col bg-white-only">
+        <div class="col" *ngIf="!showTimeline   ">
+            <athl-spinner></athl-spinner>
+        </div>
+
+        <div class="col bg-white-only" *ngIf="showTimeline">
             <div class="wrapper">
                 <ul class="timeline">
                     <li class="tl-header">
