clean up sport activity model

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -138,15 +138,15 @@
                             <span class="tl-date">{{activity.startDate}}</span>
                             <div class="tl-content panel padder b-a w-md w-auto-xs">
                                 <span class="arrow left pull-up"></span>
-                                <div class="text-lt m-b-sm">{{activity.activityDetails.title}}</div>
+                                <div class="text-lt m-b-sm">{{activity.title}}</div>
                                 <div class="panel-body pull-in b-t b-light">
 
                                     <div class="clear">
                                         <a href="" class="text-primary block m-b-xs">
-                                            Distance: {{activity.activityDetails.distance}}
+                                            Distance: {{activity.distance}}
                                         </a>
                                         <a href="" class="text-primary block m-b-xs">
-                                            Sport Category: {{activity.activityDetails.type}}
+                                            Sport Category: {{activity.sportActivityType}}
                                         </a>
                                     </div>
                                 </div>
