--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -25,7 +25,7 @@
                         <div class="form-inline">
 
                             <div class="">
-                                <ng-datepicker formControlName="date" class=""></ng-datepicker>
+                                <ng-datepicker formControlName="startDate" class=""></ng-datepicker>
                             </div>
 
                             <select class="form-control" formControlName="time">
@@ -35,7 +35,7 @@
                             </select>
 
                             <span class="m-b-none padder"
-                                  *ngIf="addActivityForm.dirty && addActivityForm.controls.date.errors?.required">
+                                  *ngIf="addActivityForm.dirty && addActivityForm.controls.time.errors?.required">
                             This field is required
                         </span>
 
@@ -44,13 +44,13 @@
 
                     <div class="form-group">
                         <label>Type</label>
-                        <select class="input-sm form-control" formControlName="type">
+                        <select class="input-sm form-control" formControlName="sportActivityType">
                             <option value="RUN">Running</option>
                             <option value="RIDE">Riding</option>
                             <option value="SWIM">Swimming</option>
                         </select>
                         <span class="m-b-none padder"
-                              *ngIf="addActivityForm.dirty && addActivityForm.controls.title.errors?.required">
+                              *ngIf="addActivityForm.dirty && addActivityForm.controls.sportActivityType.errors?.required">
                             This field is required
                         </span>
                     </div>
@@ -108,10 +108,10 @@
                             class="input-sm form-control">
                     </div>
                     <div class="form-group">
-                        <label>Mean Speed</label>
+                        <label>Average Speed</label>
                         <input
                             type="text"
-                            formControlName="meanSpeed"
+                            formControlName="averageSpeed"
                             placeholder="Add mean speed..."
                             class="input-sm form-control">
                     </div>
