--- a/web/src/main/webapp/app/home/home.component.html
+++ b/web/src/main/webapp/app/home/home.component.html
@@ -1,23 +1,30 @@
 <div class="tech-background">
-    <div class="row container-fluid">
-        <div class="text-center">
-            <div class="m-t-xxl m-b-xxl padder-v">
-                <h1 class="font-bold l-h-1x m-t-xxl text-black padder-v animated fadeInDown">
-                    Nie pozwól swoim marzeniom odbiec za daleko
-                </h1>
-                <h3 class="text-muted m-t-xl l-h-1x">
-                    Sportowa aplikacja mobilna, platforma komunikacyjna i edukacyjna wellness, dla amatorów
-                    i
-                    profesjonalistów
-                </h3>
+    <div class="padder-v">
+        <div class="container m-b-xxl text-center">
+            <div class="row no-gutter">
+                <div class="m-t-xxl m-b-xxl text-center">
+                    <h1 class="font-bold l-h-1x m-t-xxl text-black padder-v animated fadeInDown">
+                        Nie pozwól swoim marzeniom odbiec za daleko
+                    </h1>
+                    <h3 class="text-muted m-t-xl l-h-1x">
+                        Sportowa aplikacja mobilna, platforma komunikacyjna i edukacyjna wellness, dla amatorów
+                        i
+                        profesjonalistów
+                    </h3>
+                </div>
             </div>
-            <p class="text-center m-b-xxl wrapper">
-                <a href="http://themeforest.net/item/angulr-bootstrap-admin-web-app-with-angularjs/8437259?ref=flatfull"
+        </div>
+    </div>
+    <div class="text-center">
+        <div class="padder-v">
+            <div class=""><p class=" m-b-xxl wrapper">
+                <a href=""
                    target="_blank"
                    class="btn b-2x btn-lg b-black btn-default btn-rounded text-lg font-bold m-b-xxl animated fadeInUpBig">Czym
                     jest Athletic ?
                 </a>
             </p>
+            </div>
         </div>
     </div>
 
