--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -8,7 +8,7 @@
         <!-- .col -->
         <div class="col w-lg bg-light dk b-r bg-auto" id="aside">
             <div class="wrapper b-b">
-                <h3 class="m-n font-thin">Add Activity</h3>
+                <h3 class="m-n font-thin" jhiTranslate="timeline.manual.title">Add Activity</h3>
             </div>
             <div class="wrapper">
                     <form novalidate [formGroup]="addActivityForm" (ngSubmit)="submitActivity()" class="form-validation">
