--- a/web/src/main/webapp/app/training/results/add-result.component.html
+++ b/web/src/main/webapp/app/training/results/add-result.component.html
@@ -1,18 +1,16 @@
 <div class="tech-background">
     <div class="container padder-v">
 
-        <p class="m-n font-thin h1 padder">Dodaj wynik</p>
-        <form [formGroup]="newResultForm" novalidate class="form-validation padder">
-
+        <p class="m-n font-thin h1 padder">Add running result</p>
+        <form [formGroup]="newResultForm" novalidate (ngSubmit)="submitActivity()" class="form-validation padder">
 
             <div class="row">
                 <div class="form-group">
-
-                    <label class="font-thin h3 m-xxs m-t-md padder">Dystans</label>
+                    <label class="font-thin h3 m-xxs m-t-md padder">Distance</label>
                     <div class="form-inline col-md-12 m-t-md">
-                        <input type="number" name="distance" class=" form-control " placeholder="Dystans"
+                        <input type="number" name="distance" class=" form-control " placeholder="Distance..."
                                formControlName="distance">
-                        <select class="form-control"  >
+                        <select class="form-control">
                             <option>kilometers</option>
                             <option>meters</option>
                             <option>miles</option>
@@ -20,13 +18,13 @@
                         </select>
                     </div>
                     <span class="m-b-none padder"
-                          *ngIf="newResultForm.dirty && newResultForm.controls.distance.errors?.required">To pole jest wymagane.</span>
+                          *ngIf="newResultForm.dirty && newResultForm.controls.distance.errors?.required">This field is require</span>
                 </div>
             </div>
             <div class="row">
-                <form [formGroup]="durationGroup">
+                <div formGroupName="durationGroup">
                     <div class="">
-                        <label class=" font-thin h3 m-xxs m-t-md padder">Rekord zyciowy</label>
+                        <label class=" font-thin h3 m-xxs m-t-md padder">Duration</label>
                         <div class="form-group form-inline m-t-md">
                             <div class="col-sm input-group">
                                 <input type="number" class="form-control" formControlName="hours">
@@ -43,51 +41,24 @@
                             </div>
                         </div>
                     </div>
-                    <span class="m-b-none padder"
-                          *ngIf="durationGroup.dirty && !durationGroup.valid">To pole jest wymagane.</span>
-                </form>
-            </div>
-
-            <div class="row">
-                <div class="form-group padder">
-                    <label class="font-thin h3 m-xxs m-t-md">Data ostatniego czasu</label>
-                    <div class="m-t-md">
-                        <ng-datepicker formControlName="lastRunTime"></ng-datepicker>
-                    </div>
+                    <!--<span class="m-b-none padder"-->
+                          <!--*ngIf="newResultForm.durationGroup.dirty && !newResultForm.durationGroup.valid">To pole jest wymagane.</span>-->
                 </div>
             </div>
 
             <div class="row">
-                <form [formGroup]="lastRunTimeGroup">
-                    <div class="form-group">
-                        <label class=" font-thin h3 m-xxs m-t-md padder">Ostatni czas</label>
-                        <div class="form-group form-inline m-t-md">
-                            <div class="col-md-4 input-group">
-                                <input type="number" class=" form-control" formControlName="hours">
-                                <span class=" input-group-addon">hours</span>
-
-                            </div>
-                            <div class="col-md-4 input-group">
-                                <input type="number" class=" form-control" formControlName="minutes">
-                                <span class=" input-group-addon">min</span>
-
-                            </div>
-                            <div class="col-md-4 input-group">
-                                <input type="number" class=" form-control" formControlName="seconds">
-                                <span class=" input-group-addon">sec</span>
-                            </div>
-                        </div>
+                <div class="form-group padder">
+                    <label class="font-thin h3 m-xxs m-t-md">Date</label>
+                    <div class="m-t-md">
+                        <ng-datepicker formControlName="activityDate"></ng-datepicker>
                     </div>
-                    <span class="m-b-none padder"
-                          *ngIf="lastRunTimeGroup.dirty && !lastRunTimeGroup.valid">To pole jest wymagane.</span>
-                </form>
+                </div>
             </div>
-
+        <div class="">
+            <button class="btn btn-primary">Add result</button>
+        </div>
         </form>
 
-        <div class="padder">
-            <button class="btn btn-primary" (click)="addNewResult()">Dodaj</button>
-        </div>
 
     </div>
 
