--- a/web/src/main/webapp/app/training/results/results.component.html
+++ b/web/src/main/webapp/app/training/results/results.component.html
@@ -1,23 +1,18 @@
 <!--PRZEGLAD WYNIKOW SPORTOWYCH-->
 <div class="tech-background">
     <div class="container padder-v">
-
-        <p class="m-n font-thin h1">Przeglad wynikow sportowych</p>
+        <p class="m-n font-thin h1">Sport results</p>
         <div class="row">
             <article class="form-group col-sm-12 m-t-md">
-
-
                 <table class="table table-striped m-b-md">
                     <thead>
                     <tr>
-                        <th>Dystans</th>
-                        <th>Data</th>
-                        <th>Czas</th>
+                        <th>Distance</th>
+                        <th>Date</th>
+                        <th>Duration</th>
                     </tr>
                     </thead>
                     <tbody>
-
-
                     <tr *ngFor="let result of activities">
                         <td><span>{{result.distance}}</span></td>
                         <td><span>{{result.startDate}}</span></td>
@@ -25,9 +20,9 @@
                     </tr>
                     </tbody>
                 </table>
-                <button class="btn  btn-primary" (click)="click()">Dodaj</button>
+                <button class="btn  btn-primary" (click)="addActivityResult()">Add running activities</button>
+                <button class="btn  btn-success" (click)="goToTimeline()">Go to profile</button>
             </article>
         </div>
-
     </div>
 </div>
