--- a/web/src/main/webapp/app/training/results/add-result.component.html
+++ b/web/src/main/webapp/app/training/results/add-result.component.html
@@ -68,10 +68,11 @@
                     </div>
                 </div>
             </div>
-            <div class="">
-                <button class="btn btn-primary">Add result</button>
-            </div>
         </form>
+        <div class="">
+            <button class="btn btn-primary" (click)="submitActivity()">Add result</button>
+            <button class="btn btn-danger" (click)="cancel()">Cancel</button>
+        </div>
 
 
     </div>
