--- a/web/src/main/webapp/app/home/home.component.html
+++ b/web/src/main/webapp/app/home/home.component.html
@@ -35,7 +35,7 @@
                     <div class="bg-light m-r-n-md no-m-xs no-m-sm">
                         <a href="../angular" class="wrapper-xl block">
                             <span class="h3 m-t-sm text-black">Integracja</span>
-                            <span class="block m-b-md m-t">Zintegruj swoje wyniki z ulubionych aplikacji sportowych w jednym miejscu. Komunikacja m.in. ze Stravą, MyFitnessPal i Garminem.
+                            <span class="block m-b-md m-t">Zintegruj swoje wyniki z ulubionych aplikacji sportowych w jednym miejscu. Komunikacja m.in. ze Stravą i Garminem.
 Efektywnie planowanie, zarządzanie i analiza treningów.
 
                             </span>
@@ -86,11 +86,7 @@ każda aktywność, nie tylko sportowa, jest przeliczana na punkty, a punkty na 
 
 <div id="why" class="bg-light">
     <div class="container">
-        <div class="m-t-xxl m-b-xl text-center wrapper">
-            <h2 class="text-black font-bold">Why use <span class="b-b b-dark">AngularJS</span> for your next
-                application?</h2>
-            <p class="text-muted h4 m-b-xl">Build the Single-Page Applications -- SPAs</p>
-        </div>
+
         <div class="row m-t-xl m-b-xl text-center">
             <div class="col-sm-3" data-ride="animated" data-animation="fadeInLeft" data-delay="300">
                 <p class="h3 m-b-xl inline b b-dark rounded wrapper-lg">
@@ -140,55 +136,3 @@ każda aktywność, nie tylko sportowa, jest przeliczana na punkty, a punkty na 
         </div>
     </div>
 </div>
-
-<!--<div class="row">-->
-<!--<div class="col-md-3">-->
-<!--<span class="hipster img-fluid img-rounded"></span>-->
-<!--</div>-->
-<!--<div class="col-md-9">-->
-<!--<h1 class="display-4" jhiTranslate="home.title">Welcome, Java Hipster!</h1>-->
-<!--<p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>-->
-
-<!--<div [ngSwitch]="isAuthenticated()">-->
-<!--<div class="alert alert-success" *ngSwitchCase="true">-->
-<!--<span *ngIf="account" jhiTranslate="home.logged.message"-->
-<!--translateValues="{username: '{{account.login}}'}"> You are logged in as user "{{account.login}}". </span>-->
-<!--</div>-->
-
-<!--<div class="alert alert-warning" *ngSwitchCase="false">-->
-<!--<span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>-->
-<!--<a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign-->
-<!--in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>-->
-<!--</div>-->
-
-<!--<div class="alert alert-warning" *ngSwitchCase="false">-->
-<!--<span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>-->
-<!--<a class="alert-link" routerLink="register" jhiTranslate="global.messages.info.register.link">Register a-->
-<!--new account</a>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<p jhiTranslate="home.question">-->
-<!--If you have any question on JHipster:-->
-<!--</p>-->
-
-<!--<ul>-->
-<!--<li><a href="http://jhipster.github.io/" target="_blank" rel="noopener" jhiTranslate="home.link.homepage">JHipster-->
-<!--homepage</a></li>-->
-<!--<li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener"-->
-<!--jhiTranslate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>-->
-<!--<li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank"-->
-<!--rel="noopener" jhiTranslate="home.link.bugtracker">JHipster bug tracker</a></li>-->
-<!--<li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener"-->
-<!--jhiTranslate="home.link.chat">JHipster public chat room</a></li>-->
-<!--<li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener"-->
-<!--jhiTranslate="home.link.follow">follow @java_hipster on Twitter</a></li>-->
-<!--</ul>-->
-
-<!--<p>-->
-<!--<span jhiTranslate="home.like">If you like JHipster, don't forget to give us a star on</span> <a-->
-<!--href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener"-->
-<!--jhiTranslate="home.github">Github</a>!-->
-<!--</p>-->
-<!--</div>-->
-<!--</div>-->
