activity screen redesing

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -161,12 +161,23 @@
                                 </div>
                                 <div class="panel-body pull-in b-t b-light">
                                     <div class="clear">
-                                        <a href="" class="text-primary block m-b-xs">
-                                            Distance: {{activity.distance}}
-                                        </a>
-                                        <a href="" class="text-primary block m-b-xs">
+                                        <p class="text-primary block m-b-xs">
                                             Sport Category: {{activity.sportActivityType}}
-                                        </a>
+                                        </p>
+                                        <div class="row  font-normal">
+                                            <div class="col-sm-6 text-dark ">
+                                                <p class="m-xxs text-sm">Distance:/p>
+                                                <p class="text-lg m-xxs">
+                                                    {{activity.distance}}
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-6 text-dark ">
+                                                <p class="m-xxs text-sm">Time:</p>
+                                                <p class="text-lg m-xxs">
+                                                    {{activity.movingTime}}
+                                                </p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
