--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -86,9 +86,9 @@
                                    name="distance" class="form-control col-sm-6"
                                    placeholder="Distance..."
                                    formControlName="distance">
-                            <select class="form-control col-sm-6" formControlName="unit">
-                                <option>kilometers</option>
-                                <option>meters</option>
+                            <select class="form-control col-sm-6" formControlName="units">
+                                <option>km</option>
+                                <option>m</option>
                                 <option>miles</option>
                                 <option>yards</option>
                             </select>
@@ -172,7 +172,7 @@
                                         <div class="col-sm-4 text-dark ">
                                             <p class="m-xxs text-sm">Distance:</p>
                                             <p class="text-lg m-xxs">
-                                                {{activity.distance}}
+                                                {{activity.distance}} {{activity.units}}
                                             </p>
                                         </div>
                                         <div class="col-sm-4 text-dark ">
