--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -145,7 +145,6 @@
             <!-- the component as the initial center of the map: -->
 
 
-
             <div class="wrapper">
                 <ul class="timeline">
                     <li class="tl-header">
@@ -153,78 +152,88 @@
                     </li>
                     <li class="tl-item" *ngFor="let activity of activities; let i = index">
                         <div class="tl-wrap b-primary">
-                            <div class="tl-content panel padder b-a w-xxl">
-                                <div class="panel-body pull-in" *ngIf="activity.trackerSource=='MANUAL'">
-                                    <a href="" class="thumb pull-right m-xs  avatar">
-                                        <img  src="athleticspot.png" alt="...">
-                                    </a>
-                                </div>
-                                <div class="panel-body pull-in" *ngIf="activity.trackerSource=='STRAVA'">
-                                    <a href="" class="thumb pull-right m-xs  avatar">
-                                        <img  src="strava.png" alt="...">
-                                    </a>
-                                </div>
-                                <div class="panel-body pull-in" >
-                                    <a href="" class="thumb pull-right m-xs  avatar">
-                                        <img src="b10.jpg" alt="...">
-                                    </a>
-                                </div>
+                            <div class="tl-content panel padder b-a w-full">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="panel-body pull-in" *ngIf="activity.trackerSource=='MANUAL'">
+                                            <a href="" class="thumb pull-right m-xs  avatar">
+                                                <img src="athleticspot.png" alt="...">
+                                            </a>
+                                        </div>
+                                        <div class="panel-body pull-in" *ngIf="activity.trackerSource=='STRAVA'">
+                                            <a href="" class="thumb pull-right m-xs  avatar">
+                                                <img src="strava.png" alt="...">
+                                            </a>
+                                        </div>
+                                        <div class="panel-body pull-in">
+                                            <a href="" class="thumb pull-right m-xs  avatar">
+                                                <img src="b10.jpg" alt="...">
+                                            </a>
+                                        </div>
 
-                                <span class="arrow left pull-up"></span>
-                                <div class=" m-b-md">
-                                    <div class="text-dark-lt font-bold text-md">
-                                        <p>{{activity.firstAndLastName}}</p>
-                                    </div>
-                                    <p class="">{{activity.startDate}}</p>
-                                    <div class="text-dark-lt font-bold text-lg">
-                                        <p>{{activity.title}}</p>
-                                    </div>
-                                </div>
-                                <!--<div class="panel-body pull-in b-t b-light">-->
-                                <div class="m-b-md b-t b-info">
-                                    <p class="text-primary block m-b-xs">
-                                        Sport Category: {{activity.sportActivityType}}
-                                    </p>
-                                    <div class="row  font-normal">
-                                        <div class="col-sm-4 text-dark ">
-                                            <p class="m-xxs text-sm">Distance:</p>
-                                            <p class="text-lg m-xxs">
-                                                {{activity.distance}} {{activity.units}}
-                                            </p>
+                                        <span class="arrow left pull-up"></span>
+                                        <div class=" m-b-md">
+                                            <div class="text-dark-lt font-bold text-md">
+                                                <p>{{activity.firstAndLastName}}</p>
+                                            </div>
+                                            <p class="">{{activity.startDate}}</p>
+                                            <div class="text-dark-lt font-bold text-lg">
+                                                <p>{{activity.title}}</p>
+                                            </div>
                                         </div>
-                                        <div class="col-sm-4 text-dark ">
-                                            <p class="m-xxs text-sm">Time:</p>
-                                            <p class="text-lg m-xxs">
-                                                {{activity.movingTime}}
+                                        <!--<div class="panel-body pull-in b-t b-light">-->
+                                        <div class="m-b-md b-t b-info">
+                                            <p class="text-primary block m-b-xs">
+                                                Sport Category: {{activity.sportActivityType}}
                                             </p>
+                                            <div class="row  font-normal">
+                                                <div class="col-sm-4 text-dark ">
+                                                    <p class="m-xxs text-sm">Distance:</p>
+                                                    <p class="text-lg m-xxs">
+                                                        {{activity.distance}} {{activity.units}}
+                                                    </p>
+                                                </div>
+                                                <div class="col-sm-4 text-dark ">
+                                                    <p class="m-xxs text-sm">Time:</p>
+                                                    <p class="text-lg m-xxs">
+                                                        {{activity.movingTime}}
+                                                    </p>
+                                                </div>
+                                                <div class="col-sm-4 text-dark ">
+                                                    <p class="m-xxs text-sm">Avg speed:</p>
+                                                    <p class="text-lg m-xxs">
+                                                        {{activity.averageSpeed}}
+                                                    </p>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <div class="col-sm-4 text-dark ">
-                                            <p class="m-xxs text-sm">Avg speed:</p>
-                                            <p class="text-lg m-xxs">
-                                                {{activity.averageSpeed}}
-                                            </p>
-                                        </div>
+
+                                        <!--</div>-->
                                     </div>
-                                </div>
-                                <div *ngIf="activity.coordinates?.length >0">
-                                    <agm-map [latitude]="activity.coordinates[0].lat"
-                                             [longitude]="activity.coordinates[0].lng" [scrollwheel]="false"
-                                             [zoom]="12">
-                                        <ng-container>
-                                            <agm-polyline *ngFor="let point of activity.coordinates;let i = index;"
-                                                          [strokeColor]="'#2196f3'">
-                                                <agm-polyline-point [latitude]="point.lat" [longitude]="point.lng">
-                                                </agm-polyline-point>
-                                                <ng-container *ngIf="activity.coordinates[i+1]">
-                                                    <agm-polyline-point [latitude]="activity.coordinates[i+1].lat"
-                                                                        [longitude]="activity.coordinates[i+1].lng">
-                                                    </agm-polyline-point>
+                                    <div class="col-lg-6">
+                                        <div *ngIf="activity.coordinates?.length >0">
+                                            <agm-map [latitude]="activity.coordinates[0].lat"
+                                                     [longitude]="activity.coordinates[0].lng" [scrollwheel]="false"
+                                                     [zoom]="13">
+                                                <ng-container>
+                                                    <agm-polyline
+                                                        *ngFor="let point of activity.coordinates;let i = index;"
+                                                        [strokeColor]="'#2196f3'">
+                                                        <agm-polyline-point [latitude]="point.lat"
+                                                                            [longitude]="point.lng">
+                                                        </agm-polyline-point>
+                                                        <ng-container *ngIf="activity.coordinates[i+1]">
+                                                            <agm-polyline-point
+                                                                [latitude]="activity.coordinates[i+1].lat"
+                                                                [longitude]="activity.coordinates[i+1].lng">
+                                                            </agm-polyline-point>
+                                                        </ng-container>
+                                                    </agm-polyline>
                                                 </ng-container>
-                                            </agm-polyline>
-                                        </ng-container>
-                                    </agm-map>
+                                            </agm-map>
+                                        </div>
+                                    </div>
                                 </div>
-                                <!--</div>-->
                             </div>
                         </div>
                     </li>
