--- a/web/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/web/src/main/webapp/app/layouts/footer/footer.component.html
@@ -35,7 +35,7 @@
                     <!--</div>-->
                 <!--</div>-->
                 <div class="col-sm-3">
-                    <h4 class="text-u-c m-b font-thin"><span class="b-b b-dark font-bold">Contac</span> Us</h4>
+                    <h4 class="text-u-c m-b font-thin"><span class="b-b b-dark font-bold">Contact</span> Us</h4>
                     <!--<p>Do not want to miss anything? Subscribe to our newsletter box</p>-->
                     <form class="form-inline m-t m-b text-center m-b-xl">
                         <div class="aside-xl inline">
