--- a/web/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/web/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -46,6 +46,34 @@
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
+
+                <li ngbDropdown class="nav-item dropdown pointer"
+                    routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                    <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="user-menu">
+                    <span>
+                        <i class="fa fa-user-circle" aria-hidden="true"></i>
+                        <span jhiTranslate="global.menu.community.main">Community</span>
+                        <b class="caret"></b>
+                    </span>
+                    </a>
+                    <ul class="dropdown-menu" ngbDropdownMenu>
+                        <li>
+                            <a class="dropdown-item" routerLink="friends" routerLinkActive="active"
+                               (click)="collapseNavbar()">
+                                <i class="fa fa-fw fa-user-plus" aria-hidden="true"></i>
+                                <span jhiTranslate="global.menu.community.search">Friends</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" routerLink="user-management" routerLinkActive="active"
+                               (click)="collapseNavbar()">
+                                <i class="fa fa-fw fa-group" aria-hidden="true"></i>
+                                <span jhiTranslate="global.menu.community.groups">Groups</span>
+                            </a>
+                        </li>
+                    </ul>
+                    </li>
+
                 <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer"
                     routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                     <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="admin-menu">
