--- a/web/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/web/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -47,7 +47,7 @@
                     </ul>
                 </li>
 
-                <li ngbDropdown class="nav-item dropdown pointer"
+                <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer"
                     routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                     <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="user-menu">
                     <span>
