--- a/web/src/main/webapp/app/account/friends/friends.component.html
+++ b/web/src/main/webapp/app/account/friends/friends.component.html
@@ -16,18 +16,14 @@
                 <table class="table table-striped m-b-md">
                     <thead>
                     <tr>
-                        <th>Athlete</th>
-                        <th>Action</th>
+                        <th jhiTranslate="friends.table.athlete">Athlete</th>
+                        <th jhiTranslate="friends.table.action">Action</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <!--<tr>-->
-                        <!--<td><span>Tomek Kasprzycki<button class="m-l-xs btn btn-success">Follow</button></span></td>-->
-                        <!--<td><span>BBH - Fintech</span></td>-->
-                    <!--</tr>-->
                     <tr *ngFor="let friend of friends">
                         <td><span>{{friend.name}}</span></td>
-                        <td><span><button class="m-l-xs btn btn-success">Follow</button></span></td>
+                        <td><span><button class="m-l-xs btn btn-success" (click)="follow(friend.id)" >Follow</button></span></td>
                     </tr>
                     </tbody>
                 </table>
