--- a/web/src/main/webapp/app/account/friends/friends.component.html
+++ b/web/src/main/webapp/app/account/friends/friends.component.html
@@ -22,7 +22,7 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let friend of friends">
-                        <td><span>{{friend.name}}</span></td>
+                        <td><span>{{friend.firstAndLastName}}</span></td>
                         <td><span><button class="m-l-xs btn btn-success" (click)="follow(friend.id)" >Follow</button></span></td>
                     </tr>
                     </tbody>
