--- a/web/src/main/webapp/app/account/friends/friends.component.html
+++ b/web/src/main/webapp/app/account/friends/friends.component.html
@@ -23,7 +23,7 @@
                     <tbody>
                     <tr *ngFor="let friend of friends">
                         <td><span>{{friend.firstAndLastName}}</span></td>
-                        <td><span><button *ngIf="!friend.followedByCurrent" class="m-l-xs btn btn-success" (click)="follow(friend.id)" >Follow</button><button *ngIf="friend.followedByCurrent" class="m-l-xs btn btn-rounded" (click)="follow(friend.id)" >Unfollow</button></span></td>
+                        <td><span><button *ngIf="!friend.followedByCurrent" class="m-l-xs btn btn-success" (click)="follow(friend.id)" >Follow</button><button *ngIf="friend.followedByCurrent" class="m-l-xs btn btn-rounded" (click)="unfollow(friend.id)" >Unfollow</button></span></td>
                     </tr>
                     </tbody>
                 </table>
